# rlsnake

./: .envrc  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  render_asciinema.py
devshell/: flake.nix
docker_only/: environment.yml
env/: README.md
env/snake/: __init__.py
env/snake/envs/: __init__.py  snake_env copy.py  snake_env.py
env/snake/wrappers/: __init__.py
lib/snake/: pyproject.toml
lib/snake/snake/: __init__.py
lib/snake/snake/envs/: __init__.py  snake_base.py  snake_directional.py  snake_env.py  snake_grid.py  snake_grid_discrete.py  snake_positional.py  snake_positions.py  snake_surroundings.py
lib/snake/snake/render/: asciinema.py
lib/snake/snake/wrappers/: clip_reward.py  discrete_observations.py
notebooks/: exploring.py  training.py
plotting/: plotting.py  wandb_grid_det_score.csv  wandb_simple_det_score.csv
report/: main.typ  refs.bib  report.typ
scripts/: testenv.py
src/rlsnakes/: _training.py  cli.py  cli_positions.py  positions.py  positions_dqn.py  rnn_grid.py  rnn_grid_discrete.py  surroundings_dqn.py  training_grid.py  training_grid_discrete.py
training/: _training.py  cli.py  cli_directional.py  cli_grid.py  cli_positional.py  cli_rnn.py  cli_surroundings.py  directional.py  directional_dqn.py  grid.py  grid_discrete.py  grid_sweep.yaml  positional.py  positional_dqn.py  positions.py  rnn_grid.py  testenv.py  training_grid.py  training_grid_discrete.py
