[project]
authors = [{name = "carschandler", email = "92899389+carschandler@users.noreply.github.com"}]
dependencies = [
 "torchrl>=0.6.0,<0.7",
 "tensordict>=0.6.1,<0.7",
 "ipython>=8.29.0",
 "jupyter>=1.1.1",
 "copier>=9.4.1",
 # "gymnasium<1.0.0",
]
description = "Add a short description here"
name = "rlsnakes"
requires-python = "==3.10.15"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
rlsnakes = { path = ".", editable = true }
snake = { path = "lib/snake", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipython = ">=8.29.0,<9"
jupyter = ">=1.1.1,<2"
gymnasium = "<1.0.0"
numpy = ">=1.26.4,<2"
asciinema = ">=2.4.0,<3"
wandb = ">=0.18.7,<0.19"
dill = ">=0.3.9,<0.4"

[tool.uv]
override-dependencies = ["snake"]

[tool.uv.sources]
snake = { path = "lib/snake", editable = true }
